# Cogni-OS-2.0

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  Run-CogniOS-CLI.cmd  Run-CogniOS-Demo.cmd  Run-CogniOS-Server-GPU5.sh  pyproject.toml
cogni_agent/: __init__.py  conditioning.py  conversation.py  conversation_fastpath.py  core_pipeline.py  fact_grounding.py  local_voice.py  manager.py  model_service.py  model_trust.py  multimodal.py  prompting.py  protocol.py  response_quality.py  tools.py
cogni_core/: __init__.py  adaptation.py  backbone.py  c_fire.py  cts.py  cts_policy.py  cts_policy_checkpoint.json  deq.py  expert_lifecycle.py  experts.py  fast_weight_safety.py  fast_weights.py  fp_ewc.py  meta_router.py  resources.py  routing.py  search.py  swarm.py  swarm_sessions.py
cogni_demo/: __init__.py  general_web_search.py  lens_api.py  model_switch.py  pdf_extract_worker.py  protocol.py  semantic_embedder.py  server.py  workspace_capabilities.py
cogni_flow/: __init__.py  aflow.py  aflow_research.py  approval.py  cycle.py  daemon.py  evolution.py  harness.py  kernel_sandbox.py  local_proposer.py  logdb.py  orchestrator.py  production.py  proposal_review.py  proposals.py  rhythm.py  runner_attestation.py  scheduler.py  self_harness_e2e.py  snapshot.py  task_plan.py
cogni_os/: __init__.py  artifacts.py  capabilities.py  cli.py  config.py  default.toml  evidence.py  factbook.py  factory.py  gpu_lease.py  runtime.py  tensor_service.py  version.py
config/: acceptance-evidence-policy.json  evidence.schema.json  gemma4-e4b-it.manifest.toml  gemma4-e4b.manifest.toml  release-toolchain-policy.json  release-verifier-policy.json
docs/: AGENT_WORKSPACE_KO.md  ARCHITECTURE.md  CASUAL_KOREAN_VALIDATION.md  COGNIBOARD_BUSINESS_DEMO_PLAN_KO.md  COGNIBOARD_CAPABILITY_EXPANSION_ROADMAP_KO.md  COGNIBOARD_MASTER_ACCEPTANCE_CHECKLIST_KO.md  COGNIBOARD_OUTSTANDING_IMPLEMENTATION_CHECKLIST_KO.md  COGNIBOARD_USER_MANUAL_PLAYBOOK_KO.md  COGNIBOARD_V041_SERVER_IMPLEMENTATION_PLAN_KO.md  GEMMA4.md  GEMMA4_VALIDATION.md  MODEL_SWITCH_CONTROL_SAFETY_KO.md  PHASE10_AFLOW_RESEARCH.md  PHASE2_MODEL_IPC_AUTHORITY.md  PHASE8_SYSTEM3.md  PHASE9_TYPED_TASK_PLAN.md  RELEASE_PUBLICATION_TRUST_BOUNDARY_KO.md  SECURITY.md  UPSTREAM_AUDIT.md  (+2 more)
(+158 files in other folders)
