[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cogni-os"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = ["torch>=2.5"]

[project.optional-dependencies]
gemma = ["transformers>=5.8", "accelerate>=1.0", "safetensors>=0.4"]

[project.scripts]
cogni-os = "cogni_os.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["cogni_agent", "cogni_core", "cogni_demo", "cogni_flow", "cogni_os"]

[tool.setuptools.package-data]
cogni_demo = ["static/*.html", "static/*.css", "static/*.js", "static/*.svg"]
cogni_os = ["default.toml"]

[tool.ruff]
exclude = ["work", "outputs", ".agents", ".codex"]
